test/HooksAtTheTopLevel.expected
File "HooksAtTheTopLevel.ml", line 1, characters 42-57:
1 | let make () = ((div ~onClick:(fun _evt -> useMouseHook ()) ~children:[] ())
                                              ^^^^^^^^^^^^^^^
Error: Hooks can't be inside conditionals, neither loops.
